Not very sneaky. Cloned the Socket.io chat and will be trying to build off that

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Sneaky Alieny Lobby</title>
+	<h1 align="center">Sneaky Aliens</h1>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
