--- a/client/src/index.html
+++ b/client/src/index.html
@@ -49,7 +49,7 @@
         $('form').submit(function(){
           //TODO there needs to be a login page first. Once logged in, MyName should be an actual username
           socket.emit('chat message', "MyName: "+$('#m').val());
-          $('#m').val('');
+          $('#m').val(''); //resets the text in the form
           return false;
         });
         socket.on('chat message', function(msg){
@@ -59,7 +59,6 @@
           }
           $("#messages").scrollTop($("#messages")[0].scrollHeight);
         });
-        socket.on()
       });
     </script>
   </body>
